--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 123455678990
+                Call : +7 777 777 7777
               </span>
             </a>
             <a href="">
@@ -61,7 +61,7 @@
                 Email : demo@gmail.com
               </span>
             </a>
-            <a href="">
+            <a href="https://go.2gis.com/Qbl7B">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
                 Location
@@ -88,19 +88,19 @@
                     <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about' %}"> About</a>
+                    <a class="nav-link" href="{% url 'about' %}">О НАС</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'treatment' %}">Treatment</a>
+                    <a class="nav-link" href="{% url 'treatment' %}">УСЛУГИ</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'doctor' %}">Doctors</a>
+                    <a class="nav-link" href="{% url 'doctor' %}">Доктора</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'testimonials' %}">Testimonial</a>
+                    <a class="nav-link" href="{% url 'testimonials' %}">Отзывы</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
+                    <a class="nav-link" href="{% url 'contact' %}">КОНТАКТЫ</a>
                   </li>
                 </ul>
               </div>
