--- a/templates/testimonials.html
+++ b/templates/testimonials.html
@@ -8,7 +8,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          <span>Testimonial</span>
+          <span>Отзывы</span>
         </h2>
       </div>
     </div>
@@ -20,55 +20,39 @@
               <div class="client_info">
                 <div class="client_name">
                   <h5>
-                    Morijorch
+                    {{ first_testimonial.name }}
                   </h5>
                   <h6>
-                    Default model text
+                    {{ first_testimonial.position }}
                   </h6>
                 </div>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various
+                {{ first_testimonial.message }}
               </p>
             </div>
           </div>
+          {% for testimonial in list_testimonials %}
           <div class="carousel-item">
             <div class="box">
               <div class="client_info">
                 <div class="client_name">
                   <h5>
-                    Rochak
+                    {{ testimonial.name }}
                   </h5>
                   <h6>
-                    Default model text
+                    {{ testimonial.position }}
                   </h6>
                 </div>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
+                {{ testimonial.message }}
               </p>
             </div>
           </div>
-          <div class="carousel-item">
-            <div class="box">
-              <div class="client_info">
-                <div class="client_name">
-                  <h5>
-                    Brad Johns
-                  </h5>
-                  <h6>
-                    Default model text
-                  </h6>
-                </div>
-                <i class="fa fa-quote-left" aria-hidden="true"></i>
-              </div>
-              <p>
-                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy, editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various
-              </p>
-            </div>
-          </div>
+          {% endfor %}
         </div>
         <div class="carousel_btn-box">
           <a class="carousel-control-prev" href="#customCarousel2" role="button" data-slide="prev">
